# TaskManagementSystem

./: .gitignore  README.md  main.py  pyproject.toml
app/: settings.py
app/router/: router_tasks.py
db/: database.py  task.py  user.py
db/models/: task.py  user.py
