[tool.poetry]
name = "taskmanagementsystem"
version = "0.1.0"
description = ""
authors = ["VikashPirth"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
